<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>gent.timdemey.cards</groupId>
  <artifactId>cards_framework</artifactId>
  <version>1.0</version>
  <packaging>pom</packaging>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>
  <build>
    <plugins>      
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.3</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <dependencies>
  	<dependency>
  		<groupId>com.google.code.gson</groupId>
  		<artifactId>gson</artifactId>
  		<version>2.8.0</version>
  	</dependency>
  	<dependency>
  		<groupId>junit</groupId>
  		<artifactId>junit</artifactId>
  		<version>4.12</version>
  	</dependency>
  	<dependency>
  		<groupId>com.google.guava</groupId>
  		<artifactId>guava</artifactId>
  		<version>21.0</version>
  	</dependency>
  	<dependency>
  		<groupId>com.miglayout</groupId>
  		<artifactId>miglayout</artifactId>
  		<version>3.7.4</version>
  	</dependency>
  	<dependency>
  		<groupId>org.danilopianini</groupId>
  		<artifactId>gson-extras</artifactId>
  		<version>0.2.1</version>
  	</dependency>
  	<dependency>
  		<groupId>com.weblookandfeel</groupId>
  		<artifactId>weblaf-ui</artifactId>
		<version>1.2.8</version>
	</dependency>
  </dependencies>
</project>